[gd_scene load_steps=15 format=2]

[ext_resource path="res://Bullet.gd" type="Script" id=1]
[ext_resource path="res://images/bullet/bullet0000.png" type="Texture" id=2]
[ext_resource path="res://images/bullet/bullet0001.png" type="Texture" id=3]
[ext_resource path="res://sounds/breakwall.wav" type="AudioStream" id=4]
[ext_resource path="res://sounds/enemy_hit.wav" type="AudioStream" id=5]

[sub_resource type="SpriteFrames" id=1]
animations = [ {
"frames": [ ExtResource( 2 ), ExtResource( 3 ) ],
"loop": true,
"name": "fly",
"speed": 20.0
} ]

[sub_resource type="CircleShape2D" id=2]
radius = 4.40838

[sub_resource type="Gradient" id=3]
offsets = PoolRealArray( 0.00229358, 1 )
colors = PoolColorArray( 0.722656, 0.644053, 0.376801, 1, 0.761719, 0.401006, 0.401006, 1 )

[sub_resource type="GradientTexture" id=4]
gradient = SubResource( 3 )

[sub_resource type="Curve" id=5]
min_value = -400.0
max_value = 400.0
_data = [ Vector2( 0.000345744, 400 ), 0.0, 0.0, 0, 0, Vector2( 0.0206477, 110.56 ), 0.0, 0.0, 0, 0, Vector2( 0.995143, -190.4 ), 0.0, 0.0, 0, 0 ]

[sub_resource type="CurveTexture" id=6]
curve = SubResource( 5 )

[sub_resource type="Curve" id=7]
max_value = 2.5
_data = [ Vector2( 0.00936885, 2.5 ), 0.0, 0.0, 0, 0, Vector2( 0.999654, 0.81 ), 0.0, 0.0, 0, 0 ]

[sub_resource type="CurveTexture" id=8]
curve = SubResource( 7 )

[sub_resource type="ParticlesMaterial" id=9]
emission_shape = 1
emission_sphere_radius = 2.0
flag_disable_z = true
spread = 180.0
gravity = Vector3( 0, 0, 0 )
initial_velocity = 50.0
initial_velocity_random = 0.5
angular_velocity = -8.58993e+09
orbit_velocity = 0.0
orbit_velocity_random = 0.0
linear_accel = 100.0
linear_accel_random = 0.2
linear_accel_curve = SubResource( 6 )
scale = 2.0
scale_random = 1.0
scale_curve = SubResource( 8 )
color_ramp = SubResource( 4 )

[node name="Bullet" type="KinematicBody2D"]
z_index = 102
script = ExtResource( 1 )

[node name="AnimatedSprite" type="AnimatedSprite" parent="."]
position = Vector2( 12, 4 )
frames = SubResource( 1 )
animation = "fly"
playing = true

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2( 14.4005, 4.14735 )
shape = SubResource( 2 )

[node name="ExplosionEffect" type="Particles2D" parent="."]
position = Vector2( 19.7886, 3.70555 )
emitting = false
amount = 200
lifetime = 0.5
one_shot = true
explosiveness = 0.5
process_material = SubResource( 9 )

[node name="ExplosionTimer" type="Timer" parent="."]
wait_time = 0.8
one_shot = true

[node name="ExplosionPlayer" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 4 )
volume_db = -10.0

[node name="DelayTimer" type="Timer" parent="."]
wait_time = 0.1
one_shot = true

[node name="EnemyHitPlayer" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 5 )
